# pico-lora

./: 99-picotool.rules  CMakeLists.txt  Makefile  README.md  envrc  flash
src/: CMakeLists.txt  lora.c  lora.h  print.c  print.h
